<resources>
    <string name="app_name">Recipe app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="no_favorites">No favorite meals yet</string>
    <string name="no_results">No results found</string>
    <string name="search_hint">Search for recipes…</string>
    <string name="no_results_found">No results found</string>
    <string name="category">Category:</string>
    <string name="area">Area:</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="play_video">Play video</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="meal_image">Meal image</string>
    <string name="no_favorite_meals_yet">No favorite meals yet</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="confirm_removal">Remove from Favorites</string>
    <string name="remove_favorite_confirmation">Are you sure you want to remove \"%s\" from your favorites?</string>
    <string name="sign_out_confirmation">Are you sure you want to remove Sign Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close_video" />
    <string name="loading">Loading…</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="today_s_suggested_meal">Today\'s Suggested meal</string>
    <string name="select_category">Select Category</string>
    <string name="select_ingredient">Select Ingredient</string>
    <string name="select_country">Select Country</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="login">Login</string>
    <string name="empty_space" />
    <string name="pass_place_holder">● ● ● ● ● ● ● ●</string>
    <string name="email_placeholder">example@example.com</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_text">Log in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_up_title_text">Sign Up</string>
    <string name="username_text">Username</string>
    <string name="username_placeholder">Belal Salem</string>
    <string name="category_text">Category</string>
    <string name="ingredient_text">Ingredient</string>
    <string name="country_text">Country</string>
    <string name="no_meals_found_text">No meals found</string>
    <string name="filter_image">Filter Image</string>
    <string name="recipe_master">Recipe Master</string>
    <string name="splash_description_text">Cook Smarter, Eat Better</string>
    <string name="about_the_creator">About the Creators</string>
    <string name="credits">Belal\n\n Abdallah\n\nPhilopatir\n\nGina\n\n\n\nIt helps users explore recipes, save favorites, and learn cooking easily!</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
</resources>