<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment">
    <com.google.android.material.appbar.MaterialToolbar

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="5dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/sign_up_title_text"
            android:textColor="@color/red_pink"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:paddingTop="10dp"
            />

    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        app:layout_constraintBottom_toTopOf="@id/username_til"
        app:layout_constraintStart_toStartOf="@id/username_til"
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/username_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="140dp"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxBackgroundColor="@color/pink"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username_placeholder"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="20dp"



            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        app:layout_constraintBottom_toTopOf="@id/email_til"
        app:layout_constraintStart_toStartOf="@id/email_til"
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        app:layout_constraintTop_toBottomOf="@id/username_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxBackgroundColor="@color/pink"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_placeholder"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="20dp"



            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        app:layout_constraintBottom_toTopOf="@id/password_til"
        app:layout_constraintStart_toStartOf="@id/password_til"
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        app:layout_constraintTop_toBottomOf="@id/email_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxBackgroundColor="@color/pink"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_place_holder"
            android:gravity="center_vertical|center_horizontal"
            android:paddingTop="20dp"


            />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_til"
        app:layout_constraintStart_toStartOf="@id/password_til"
        app:layout_constraintEnd_toEndOf="@id/password_til"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="24sp"
        android:text="@string/sign_up_text"
        android:backgroundTint="@color/pink"
        android:textColor="@color/sweet_pink"/>


</androidx.constraintlayout.widget.ConstraintLayout>