<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            app:titleTextColor="@color/red_pink"
            app:title="H! Belal"
            app:subtitleTextColor="@color/black"
            app:subtitle="What are you cooking today"

            />

    </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <TextView
                android:textColor="@color/red_pink"
                android:id="@+id/tvRandomMealTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today_s_suggested_meal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/randomMealCard"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivRandomMeal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/meal_image"
                        android:src="@drawable/placeholder_image"/>

                    <TextView
                        android:id="@+id/tvRandomMealName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/loading"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_pink_background"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/white"
        android:id="@+id/tvPopularMealsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_meals"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/rvPopularMeals"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"

        android:paddingHorizontal="1dp"/>

</LinearLayout>


        </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
